--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -29,6 +29,7 @@
 *** xref:user-guide/extensions/advanced-visualizations.adoc[Advanced Visualizations]
 *** xref:user-guide/extensions/rule-based-styling.adoc[Rule-Based Styling]
 *** xref:user-guide/extensions/report-actions.adoc[Report Actions]
+*** xref:user-guide/extensions/natural-language-queries.adoc[Natural Language Queries]
 ** xref:user-guide/faq.adoc[FAQ]
 * xref:developer-guide/index.adoc[Developer Guide]
 ** xref:developer-guide/build-and-run.adoc[Build & Run]
@@ -39,6 +40,7 @@
 ** xref:developer-guide/design.adoc[Design]
 ** xref:developer-guide/adding-visualizations.adoc[Adding Visualizations]
 ** xref:developer-guide/state-management.adoc[State Management]
+** xref:developer-guide/session-storage.adoc[Session Storage]
 ** xref:developer-guide/testing.adoc[Testing]
 ** xref:developer-guide/contributing.adoc[Contributing]
 
