--- a/docs/modules/ROOT/pages/user-guide/reports/pie-chart.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/pie-chart.adoc
@@ -17,7 +17,7 @@ value of the pie. See *Advanced Settings* for more information.
 [source,cypher]
 ----
 Match (n:Person)-[e]->(m:Movie)
-RETURN m.title as Title, COUNT(p) as People
+RETURN m.title as Title, COUNT(n) as People
 LIMIT 8
 ----
 
