--- a/docs/modules/ROOT/pages/developer-guide/index.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/index.adoc
@@ -6,7 +6,8 @@ This guide contains information for developers looking to deploy NeoDash, or ext
 - link:configuration[Configuration]
 - link:standalone-mode[Standalone Mode] 
 - link:component-overview[Component Overview] 
-- link:design[Design] 
+- link:design[Design]
+- link:style-configuration[Style Configuration]
 - link:adding-visualizations[Adding Visualizations] 
 - link:state-management[State Management] 
 - link:testing[Testing]
