--- a/apps/docs/modules/ROOT/pages/quickstart.adoc
+++ b/apps/docs/modules/ROOT/pages/quickstart.adoc
@@ -16,7 +16,7 @@ Or, build it yourself:
 ```
 git clone https://github.com/neo4j-labs/neodash     
 yarn install      
-yarn run dev
+yarn start:editor
 ```
 
 NeoDash connects to any recent version of the Neo4j database. (Neo4j 4.0
