--- a/apps/docs/modules/ROOT/pages/developer-guide/adding-visualizations.adoc
+++ b/apps/docs/modules/ROOT/pages/developer-guide/adding-visualizations.adoc
@@ -15,7 +15,7 @@ You can add a new chart to NeoDash in three steps:
 git clone git@github.com:neo4j-labs/neodash.git
 git checkout develop
 yarn install
-yarn run dev
+yarn start:editor
 ....
 
 [arabic, start=2]
