standalone load v1 (working)

--- a/docs/modules/ROOT/pages/developer-guide/state-management.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/state-management.adoc
@@ -134,6 +134,7 @@ standalone mode.
     "standaloneDatabase": "neo4j",
     "standaloneDashboardName": "My Dashboard",
     "standaloneDashboardDatabase": "dashboards",
+    "standaloneAllowLoad": true,
     "notificationIsDismissable": null
 }
 ....
