--- a/docs/modules/ROOT/pages/developer-guide/configuration.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/configuration.adoc
@@ -24,7 +24,8 @@ will look like this:
     "standaloneDatabase": "neo4j",
     "standaloneDashboardName": "My Dashboard",
     "standaloneDashboardDatabase": "dashboards",
-    "standaloneDashboardURL": ""
+    "standaloneDashboardURL": "",
+    "standaloneAllowLoad": true
 }
 ....
 
@@ -84,6 +85,12 @@ use multiple databases.
 inside Neo4j and would like to run a standalone mode deployment with a
 dashboard from a URL, set this parameter to the complete URL pointing to
 the dashboard JSON.
+
+|standaloneAllowLoad |boolean |true |If set t yes the "Load Dashboard"
+button will be enabled in standalone mode, allowing users to load 
+additional dashboards from Neo4J. 
+*NOTE*: when Load is enabled in standalone mode, only Database is available
+as a source, not file.
 |===
 
 == Configuring SSO
