Added docs for forms. Improved stability on form

--- a/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
@@ -18,6 +18,7 @@ The currently available extensions in NeoDash are:
 - link:rule-based-styling[Rule-based Styling]
 - link:report-actions[Report Actions]
 - link:natural-language-queries[Natural Language Queries]
+- link:forms[Forms]
 
 == Types of Extensions
 
