--- a/docs/modules/ROOT/pages/developer-guide/state-management.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/state-management.adoc
@@ -134,8 +134,11 @@ standalone mode.
     "standaloneDatabase": "neo4j",
     "standaloneDashboardName": "My Dashboard",
     "standaloneDashboardDatabase": "dashboards",
+    "standaloneDashboardURL": "dashboards",
     "standaloneAllowLoad": false,
     "standaloneLoadFromOtherDatabases ": false,
+    "standaloneMultiDatabase": false,
+    "standaloneDatabaseList": "neo4j",
     "notificationIsDismissable": null
 }
 ....
