--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -16,6 +16,7 @@
 *** xref:user-guide/reports/treemap.adoc[Treemap]
 *** xref:user-guide/reports/radar.adoc[Radar Chart]
 *** xref:user-guide/reports/sankey.adoc[Sankey Chart]
+*** xref:user-guide/reports/gantt.adoc[Gantt Chart]
 *** xref:user-guide/reports/map.adoc[Map]
 *** xref:user-guide/reports/single-value.adoc[Single Value]
 *** xref:user-guide/reports/gauge-chart.adoc[Gauge Chart]
