--- a/docs/modules/ROOT/pages/user-guide/reports/table.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/table.adoc
@@ -54,6 +54,8 @@ set to ``[2, 1, 1]''.
 the bottom right of the table footer. This button lets the user download
 the complete set of table results (all pages) as a CSV file.
 
+|Override no data message |Text |Query returned no data. |Override the message displayed to the user when their query returns no data.
+
 |Auto-run query |on/off |on |when activated automatically runs the query
 when the report is displayed. When set to `off', the query is displayed
 and will need to be executed manually.
