--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -102,8 +102,10 @@ pages:
 - link:areamap[Area Map] 
 - link:single-value[Single Value] 
 - link:sankey[Sankey Chart] 
+- link:gantt[Gantt Chart] 
 - link:gauge[Gauge Chart]
 - link:raw-json[Raw JSON] 
 - link:parameter-select[Parameter Select] 
+- link:form[Form] 
 - link:iframe[iFrame]
 - link:markdown[Markdown]
